# ur5e-zone-speed-control

./: .flake8  .gitattributes  .gitignore  .gitmodules  README.md
launch/: bringup_mock.launch.py  bringup_pipeline.launch.py  bringup_real.launch.py  kinect2_optimized.launch.yaml
src/operator_detection/gesture_detector/: README.md  package.xml  setup.py
src/operator_detection/gesture_detector/config/: gesture_detector_node.yaml
src/operator_detection/gesture_detector/gesture_detector/: gesture_detector_node.py
src/operator_detection/gesture_detector/launch/: gesture_detector_node.launch.py
src/operator_detection/kinect_pose_detector/: README.md  package.xml  setup.cfg  setup.py
src/operator_detection/kinect_pose_detector/config/: pose_detector.yaml
src/operator_detection/kinect_pose_detector/kinect_pose_detector/: pose_detector_node.py
src/operator_detection/kinect_pose_detector/launch/: pose_detector.launch.py
src/operator_detection/operator_detection_common/: README.md  package.xml  setup.cfg  setup.py
src/operator_detection/operator_detection_common/operator_detection_common/: keypoints.py
src/operator_detection/operator_detection_common/test/: test_flake8.py
src/operator_detection/operator_gui/: README.md  package.xml  setup.py
src/operator_detection/operator_gui/config/: operator_gui.yaml
src/operator_detection/operator_gui/launch/: operator_gui.launch.py
src/operator_detection/operator_gui/operator_gui/: operator_gui_node.py
src/operator_detection/operator_zones/: README.md  package.xml  setup.cfg  setup.py
src/operator_detection/operator_zones/config/: zones_node.yaml
src/operator_detection/operator_zones/launch/: zones_node.launch.py
src/operator_detection/operator_zones/operator_zones/: zones_node.py
src/operator_detection/save_kinect_rgbd/: CMakeLists.txt  README.md  package.xml
src/operator_detection/save_kinect_rgbd/include/save_kinect_rgbd/: rgbd_saver.hpp  rgbd_saver_node.hpp
src/operator_detection/save_kinect_rgbd/src/: rgbd_saver.cpp  rgbd_saver_node.cpp  rgbd_saver_ros.cpp
src/robot_control/flag_grasper/: CMakeLists.txt  LICENSE  README.md  package.xml
src/robot_control/flag_grasper/config/: flag_grasper.yaml
src/robot_control/flag_grasper/include/flag_grasper/: flag_grasper.hpp  flag_grasper_node.hpp
src/robot_control/flag_grasper/launch/: flag_grasper.launch.py
src/robot_control/flag_grasper/src/: flag_grasper.cpp  flag_grasper_node.cpp  flag_grasper_ros.cpp
src/robot_control/lemniscate_executor/: CMakeLists.txt  README.md  package.xml
src/robot_control/lemniscate_executor/config/: lemniscate_executor.yaml
src/robot_control/lemniscate_executor/include/lemniscate_executor/: cubic_spline.hpp  lemniscate.hpp  lemniscate_executor_node.hpp  pose_utils.hpp
src/robot_control/lemniscate_executor/launch/: lemniscate_executor.launch.py
src/robot_control/lemniscate_executor/src/: lemniscate.cpp  lemniscate_executor_node.cpp  lemniscate_executor_ros.cpp
src/robot_control/zone_speed_controller/: CMakeLists.txt  README.md  package.xml
src/robot_control/zone_speed_controller/config/: speed_controller.yaml
src/robot_control/zone_speed_controller/include/zone_speed_controller/: speed_controller_node.hpp  speed_fsm.hpp
src/robot_control/zone_speed_controller/launch/: speed_controller.launch.py
src/robot_control/zone_speed_controller/src/: speed_controller_node.cpp  speed_controller_ros.cpp  speed_fsm.cpp
