<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gesture_detector</name>
  <version>1.0.0</version>
  <description>
    Detects the held "both wrists above the nose" gesture from /pose/operator_skeleton
    and publishes /operator/collaborative_mode (Bool, latched).
  </description>
  <maintainer email="dmog1408@gmail.com">dmitrii-ognev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>operator_detection_common</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
