<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinect_pose_detector</name>
  <version>1.0.0</version>
  <description>MediaPipe-based 3D human pose detection from Kinect v2 for ROS2</description>
  <maintainer email="dmog1408@gmail.com">dmitrii-ognev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>operator_detection_common</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
