<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lemniscate_executor</name>
  <version>1.0.0</version>
  <description>Continuous Gerono lemniscate trajectory execution on a UR5e via MoveIt and FollowJointTrajectory</description>
  <maintainer email="dmog1408@gmail.com">dmitrii-ognev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>ur_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>Eigen3</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>