<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zone_speed_controller</name>
  <version>1.0.0</version>
  <description>Zone-based UR5e speed regulation with danger-zone pause and perception watchdog</description>
  <maintainer email="dmog1408@gmail.com">dmitrii-ognev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ur_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>